[package]
name = "ratatui-comfy-toaster"
description = "An advanced toast engine for ratatui"
version = "0.1.1"
edition = "2024"
authors = ["ComfyHome™ <dev@comfyhome.io>"]
license = "SA-PS:DA"
homepage = "https://github.com/comfy-home/misc-RatatuiComfyToaster"
repository = "https://github.com/comfy-home/misc-RatatuiComfyToaster"
readme = "README.md"
keywords = ["tui", "cli", "ratatui", "comfy", "toaster", "notifications", "toast"]
categories = ["command-line-utilities", "command-line-interface"]

[package.metadata]
attributions = ["JayanAXHF <sunil.chdry@gmail.com> for the original ratatui-toaster."]
attrib_timeline = ["ratatui-comfy-toaster v0.1.0 is based on ratatui-toaster v0.1.2"]
attrib_link = ["https://crates.io/crates/ratatui-toaster"]

[dependencies]
ratatui = { version = "0.30.0", default-features = false, features = ["unstable-widget-ref"] }
textwrap = "0.16.2"
tokio = { version = "1.50", features = ["rt-multi-thread"], optional = true }

[features]
tokio = ["dep:tokio"]

[[example]]
name = "examples"
path = "examples/example_{n}.rs"

[dev-dependencies]
anyhow = "1.0.102"
tokio = { version = "1.50", features = ["rt-multi-thread", "sync", "time", "macros"] }
ratatui = { version = "0.30.0" }
tachyonfx = { version = "0.25.0", default-features = false, features = ["std", "std-duration"] }
tokio-util = "0.7.18"
