[package]
name = "ratatui-comfy-toaster"
description = "An advanced toast engine for ratatui. Timed toast notifications | Sticky toasts with left-click to dismiss & right-click to copy | Presets | and more..."
version = "0.6.2"
rust-version = "1.88"
edition = "2024"
authors = ["ComfyHome™ <dev@comfyhome.io>"]
license-file = "LICENSE.md"
homepage = "https://gitlab.com/comfyhome/crates/ratatui-comfy-toaster"
repository = "https://gitlab.com/comfyhome/crates/ratatui-comfy-toaster"
readme = "README.md"
keywords = ["tui", "ratatui", "toast", "notifications", "comfy"]
categories = ["command-line-utilities", "command-line-interface"]
exclude = ["assets/*.png"]

[package.metadata]
alt_repository = "https://github.com/comfy-home/misc-RatatuiComfyToaster"
attributions = ["JayanAXHF <sunil.chdry@gmail.com> for the original ratatui-toaster."]
attrib_timeline = ["ratatui-comfy-toaster v0.1.0 is based on ratatui-toaster v0.1.2"]
attrib_link = ["https://crates.io/crates/ratatui-toaster"]

[dependencies]
ratatui = { version = "0.30", default-features = false, features = ["unstable-widget-ref"] }
textwrap = "0.16.2"
unicode-width = "0.2"
tokio = { version = "1.50", features = ["rt-multi-thread"], optional = true }

[features]
tokio = ["dep:tokio"]

[workspace]

[dev-dependencies]
anyhow = "1.0.103"
color-eyre = "0.6"
tokio = { version = "1.50", features = ["rt-multi-thread", "sync", "time", "macros"] }
ratatui = { version = "0.30.2", features = ["crossterm"] }
tachyonfx = { version = "0.25", default-features = false, features = ["std", "std-duration"] }
tokio-util = "0.7.18"
